# graphico

./: CMakeLists.txt  README.md  algos.h  buttons.h  dhilufdhufhh.cpp  gui.h  main.cpp  realisation.cpp  sample.h  textbox.h  tgraph.h
algo/: algos.cpp  algos.h
buttons/: gui.cpp  gui.h  tbuttons.cpp  tbuttons.h  textbox.cpp  textbox.h
graphs/: tgraph.cpp  tgraph.h  tvertex.cpp
resources/: tcolors.h  tsample.h
